@@ -22,6 +22,7 @@ This release includes the following bugfixes:
  o cookie with invalid expire dates are now considered expired
  o HTTP pipelining over proxy
  o fix regression in configure script which affected OpenSSL builds on MSYS
+ o GnuTLS-based multi interface doing HTTPS over proxy failed
 
 This release includes the following known bugs:
 
@@ -36,6 +37,6 @@ advice from friends like these:
 
  Keith Mok, Yang Tse, Daniel Fandrich, Guenter Knauf, Dmitriy Sergeyev,
  Linus Nielsen Feltzing, Martin Drasar, Stefan Krause, Dmitry Kurochkin,
- Mike Revi, Andres Garcia
+ Mike Revi, Andres Garcia, Michael Goffioul
 
         Thanks! (and sorry if I forgot to mention someone)
